--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,96 @@
-node_modules
-dist
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Environment Variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.*
+!.env.*.example
+
+# Build outputs
+dist/
+dist-ssr/
+build/
+*.local
+server/public/
+
+# Database files
+database.sqlite
+database.sqlite-*
+*.db
+*.sqlite*
+
+# IDE and Editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
 .DS_Store
-server/public
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+*.log
+logs/
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Temporary folders
+tmp/
+temp/
+
+
+
+# Security
+private_key
+public_key
+*.pem
+*.key
+certificates/
+
+# Backup files
+*.backup
+*.bak
+
+# Development tools
+.cache/
+
+# Package manager locks (keep package-lock.json, remove others)
+yarn.lock
+pnpm-lock.yaml
+
+# Build artifacts
 vite.config.ts.*
 *.tar.gz
