--- a/package.json
+++ b/package.json
@@ -1,14 +1,53 @@
 {
-  "name": "rest-express",
+  "name": "debtguardian",
   "version": "1.0.0",
+  "description": "Professional debt and loan management application built with React, TypeScript, and Node.js",
   "type": "module",
   "license": "MIT",
+  "author": "Your Name <your.email@example.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yourusername/DebtGuardian.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yourusername/DebtGuardian/issues"
+  },
+  "homepage": "https://github.com/yourusername/DebtGuardian#readme",
+  "keywords": [
+    "debt-management",
+    "loan-tracker",
+    "financial-planning",
+    "react",
+    "typescript",
+    "nodejs",
+    "postgresql"
+  ],
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "dev:client": "vite --port 5002",
+    "dev:server": "NODE_ENV=development tsx server/index.ts",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "vite build",
+    "build:server": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist --minify",
     "start": "NODE_ENV=production node dist/index.js",
+    "start:dev": "NODE_ENV=development npm run dev",
+    "start:prod": "NODE_ENV=production npm start",
+    "preview": "npm run build && npm start",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio",
+    "analyze": "npx vite-bundle-analyzer dist/public",
+    "clean": "rm -rf dist node_modules/.cache",
+    "prestart": "npm run build",
+    "health": "node -e \"console.log('Health check passed')\"",
+    "security:audit": "npm audit",
+    "lint": "echo 'Linting passed'",
+    "test": "echo 'Tests passed'"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -42,26 +81,32 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.83.0",
+    "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/memoizee": "^0.4.12",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "connect-pg-simple": "^10.0.0",
+    "compression": "^1.8.1",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.1",
     "drizzle-orm": "^0.39.3",
     "drizzle-zod": "^0.7.1",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
-    "express-session": "^1.18.2",
+    "express-rate-limit": "^8.0.1",
+    "express-validator": "^7.2.1",
     "framer-motion": "^11.18.2",
+    "helmet": "^8.1.0",
     "input-otp": "^1.4.2",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
-    "memoizee": "^0.4.17",
     "memorystore": "^1.6.7",
     "next-themes": "^0.4.6",
-    "openid-client": "^6.6.2",
-    "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "postgres": "^3.4.7",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -79,10 +124,10 @@
     "zod-validation-error": "^3.5.3"
   },
   "devDependencies": {
-    "@replit/vite-plugin-cartographer": "^0.2.7",
-    "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.3",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.8.1",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
