Fix build: Use npx for vite and esbuild commands

--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "dev:client": "vite --port 5002",
     "dev:server": "NODE_ENV=development tsx server/index.ts",
     "build": "npm run build:client && npm run build:server",
-    "build:client": "vite build",
-    "build:server": "esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist --minify",
+    "build:client": "npx vite build",
+    "build:server": "npx esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist --minify",
     "start": "NODE_ENV=production node dist/index.js",
     "start:dev": "NODE_ENV=development npm run dev",
     "start:prod": "NODE_ENV=production npm start",
