--- a/package.json
+++ b/package.json
@@ -121,7 +121,11 @@
     "wouter": "^3.7.1",
     "ws": "^8.18.3",
     "zod": "^3.25.76",
-    "zod-validation-error": "^3.5.3"
+    "zod-validation-error": "^3.5.3",
+    "vite": "^5.4.19",
+    "esbuild": "^0.25.0",
+    "@vitejs/plugin-react": "^4.3.2",
+    "typescript": "5.6.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
@@ -137,15 +141,11 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.5.13",
-    "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.30.4",
-    "esbuild": "^0.25.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
-    "tsx": "^4.19.1",
-    "typescript": "5.6.3",
-    "vite": "^5.4.19"
+    "tsx": "^4.19.1"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
