--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "dev:client": "vite --port 5002",
     "dev:server": "NODE_ENV=development tsx server/index.ts",
     "build": "npm run build:client && npm run build:server",
-    "build:client": "npx vite build",
-    "build:server": "npx esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist --minify",
+    "build:client": "./node_modules/.bin/vite build",
+    "build:server": "./node_modules/.bin/esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist --minify",
     "start": "NODE_ENV=production node dist/index.js",
     "start:dev": "NODE_ENV=development npm run dev",
     "start:prod": "NODE_ENV=production npm start",
@@ -125,7 +125,10 @@
     "vite": "^5.4.19",
     "esbuild": "^0.25.0",
     "@vitejs/plugin-react": "^4.3.2",
-    "typescript": "5.6.3"
+    "typescript": "5.6.3",
+    "tailwindcss": "^3.4.17",
+    "postcss": "^8.4.47",
+    "autoprefixer": "^10.4.20"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
@@ -141,10 +144,7 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.5.13",
-    "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.30.4",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.17",
     "tsx": "^4.19.1"
   },
   "optionalDependencies": {
