--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "dev": "NODE_ENV=development tsx server/index.ts",
     "dev:client": "vite --port 5002",
     "dev:server": "NODE_ENV=development tsx server/index.ts",
+    "prebuild": "npm install",
     "build": "npm run build:client && npm run build:server",
-    "build:client": "./node_modules/.bin/vite build",
-    "build:server": "./node_modules/.bin/esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist --minify",
+    "build:client": "npx vite build",
+    "build:server": "npx esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist --minify",
     "start": "NODE_ENV=production node dist/index.js",
     "start:dev": "NODE_ENV=development npm run dev",
     "start:prod": "NODE_ENV=production npm start",
@@ -128,7 +129,8 @@
     "typescript": "5.6.3",
     "tailwindcss": "^3.4.17",
     "postcss": "^8.4.47",
-    "autoprefixer": "^10.4.20"
+    "autoprefixer": "^10.4.20",
+    "@types/node": "20.16.11"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
@@ -138,7 +140,6 @@
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
-    "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
