--- a/package.json
+++ b/package.json
@@ -130,10 +130,10 @@
     "tailwindcss": "^3.4.17",
     "postcss": "^8.4.47",
     "autoprefixer": "^10.4.20",
-    "@types/node": "20.16.11"
+    "@types/node": "20.16.11",
+    "@tailwindcss/typography": "^0.5.15"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.3",
     "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.8.1",
